# nrg2demosite

./: B2B_PORTAL_TESTING.md  CHECK-PYTHON.bat  GITHUB-SETUP.bat  GITHUB_PAGES.md  HERO_TEXT_UPDATE.md  LOGO_UPDATE.md  PUBLISH-TO-GITHUB.bat  QUICKSTART.txt  README.md  README_ДЛЯ_НАЧАЛЬСТВА.txt  SETUP.bat  SETUP.md  START-BACKEND.bat  START-DEMO.bat  TEST-SETUP.bat  TEST_LOGO.md  auto-setup.ps1  check_environment.py  energia.db  index.html  nrg-index.html  pyproject.toml  ІНСТРУКЦІЯ.txt  ІНСТРУКЦІЯ_GITHUB_PAGES.txt  ГОТОВО_ДО_ЗДАЧІ.txt  ДЛЯ_ВИКЛАДАЧА.txt  КОМАНДИ.txt  ПІДСУМОК_НАЛАШТУВАННЯ.md  ПУБЛІКАЦІЯ_В_ІНТЕРНЕТ.md  СТРУКТУРА.md  ЧЕКЛИСТ_ПЕРЕД_ЗДАЧЕЮ.txt  ЧИТАЙТЕ_МЕНЕ.txt  ЯК_ВІДПРАВИТИ.txt
.github/workflows/: deploy.yml
admin/: admin.js  index.html  nrg-admin.html  nrg-admin.js
backend/: config.py  energia.db  main.py  nrg_api.py  requirements.txt  telegram_bot.py
backend/models/: database.py  nrg_database.py  nrg_models.py
css/: nrg-pages.css  nrg-partners.css  nrg-style.css  style.css
data/: site-data.json
data/i18n/: en.json  uk.json
docs/: copywriting-ua.md
js/: i18n.js  main.js  nrg-main.js
nrg_energy.egg-info/: PKG-INFO  SOURCES.txt
pages/: about.html  contacts.html  domophones.html  news-single.html  nrg-about.html  nrg-brands.html  nrg-cabinet.html  nrg-cabinet.js  nrg-catalog.html  nrg-contacts.html  nrg-news.html  partners.html  privacy.html
