[project]
name = "nrg-energy"
version = "1.0.0"
description = "Енергія - система керування магазином електроніки"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "sqlalchemy==2.0.25",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "openai==1.10.0",
    "httpx==0.26.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "Pillow==10.2.0",
    "python-dotenv==1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]
